# 1D_Stencil

./: CMakeLists.txt  README.md  lu_omp.cpp  stencil.cpp  stencil_2d.cpp
